--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "vue": "^3.2.45",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
-    "multiformats": "^11.0.0"
+    "multiformats": "^11.0.0",
+    "natural": "^6.0.1",
+    "compute-cosine-similarity": "1.0.0"
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^7.0.0",
@@ -35,6 +37,7 @@
     "vite": "^3.2.4",
     "vite-electron-plugin": "^0.7.2",
     "vue-tsc": "^1.0.19"
+    
   },
   "debug": {
     "env": {
