--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue-router": "^4.1.6",
     "multiformats": "^11.0.0",
     "natural": "^6.0.1",
-    "compute-cosine-similarity": "1.0.0"
+    "compute-cosine-similarity": "1.0.0",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^7.0.0",
